[Chg] 修正錨點設定

--- a/main.html
+++ b/main.html
@@ -286,13 +286,13 @@
                     </div>
                 </div>
                 <!-- ROSY + UV navigation + 導品 -->
-                <div class="col-12">
+                <div class="col-12" id="UV">
                     <img src="images/ROSY_UV_navigation_.png" usemap="#map1">
                     <map name="map1">
-                        <area target="_blank" alt="" title="" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=2119800042&amp;p_orderType=4&amp;showType=chessboardType " coords="60,4,1257,682" shape="rect">
-                        <area target="_blank" alt="" title="" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=12969848 " coords="62,697,454,1386" shape="rect">
-                        <area target="_blank" alt="" title="" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=13729334 " coords="464,699,853,1388" shape="rect">
-                        <area target="_blank" alt="" title="" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=12861986 " coords="861,696,1257,1387" shape="rect">
+                        <area target="_blank" alt="" title="" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=2119800042&amp;p_orderType=4&amp;showType=chessboardType?npn=1vEIas3J7alT&n=1#UV" coords="60,4,1257,682" shape="rect">
+                        <area target="_blank" alt="" title="" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=12969848?npn=1vEIas3J7alT&n=1#UV" coords="62,697,454,1386" shape="rect">
+                        <area target="_blank" alt="" title="" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=13729334?npn=1vEIas3J7alT&n=1#UV" coords="464,699,853,1388" shape="rect">
+                        <area target="_blank" alt="" title="" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=12861986?npn=1vEIas3J7alT&n=1#UV" coords="861,696,1257,1387" shape="rect">
                     </map>
                 </div>
                 <!--- MELA --> 
@@ -302,13 +302,13 @@
                     </a>
                 </div>
                 <!-- 抗老精華 ＋ 導品 -->
-                <div class="col-12">
+                <div class="col-12" id="AA">
                     <img src="images/AA_navigation.png" usemap="#map2">
                     <map name="map2">
-                        <area target="_blank" alt="MELA B3 淡斑精華" title="MELA B3 淡斑精華" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=12887720 " coords="84,263,353,1116" shape="rect">
-                        <area target="_blank" alt="AB 小紅瓶" title="AB 小紅瓶" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=12969832 " coords="379,264,648,1116" shape="rect">
-                        <area target="_blank" alt="B5 小藍瓶" title="B5 小藍瓶" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=9055641 " coords="668,263,940,1116" shape="rect">
-                        <area target="_blank" alt="C12 肌光瓶" title="C12 肌光瓶" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=13438730 " coords="961,264,1233,1116" shape="rect">
+                        <area target="_blank" alt="MELA B3 淡斑精華" title="MELA B3 淡斑精華" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=12887720?npn=1vEIas3J7alT&n=1#AA" coords="84,263,353,1116" shape="rect">
+                        <area target="_blank" alt="AB 小紅瓶" title="AB 小紅瓶" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=12969832?npn=1vEIas3J7alT&n=1#AA" coords="379,264,648,1116" shape="rect">
+                        <area target="_blank" alt="B5 小藍瓶" title="B5 小藍瓶" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=9055641?npn=1vEIas3J7alT&n=1#AA" coords="668,263,940,1116" shape="rect">
+                        <area target="_blank" alt="C12 肌光瓶" title="C12 肌光瓶" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=13438730?npn=1vEIas3J7alT&n=1#AA" coords="961,264,1233,1116" shape="rect">
                     </map>
                 </div>
                 <!-- 萬用霜 ＋ 術後 -->
